# COGAR_Assignment_2026

./: .gitignore  CMakeLists.txt  README.md  build_and_launch.sh  full_setup.sh  gesture2.pth  gesture2_classes.pkl  gesture_classifier.py  gesture_training_data.json  gestures  gestures_codification.md  manus_left_joints.csv  movements.txt  package.xml  train_model.py
launch/: gazebo.launch.py
src/: go2_walk_node.py  jazzy_ur5e_control_node.py  llm_node.py  manus_ros2
src/jazzy_go2_control/: CMakeLists.txt  package.xml
src/jazzy_go2_control/config/: hand_view.rviz
src/jazzy_go2_control/launch/: gazebo.launch.py
src/jazzy_go2_control/scripts/: connection_node.py  gesture_classifier_node.py  go2_connection_node.py  go2_walk_node.py  llm_node.py  movement_node.py  obstacle_avoidance_node.py
